UI Alignment issues

--- a/stylesheets/pages/checkout.less
+++ b/stylesheets/pages/checkout.less
@@ -2551,7 +2551,7 @@
                                                 width:12px;
                                                 height:14px;
                                                 position: absolute;
-                                                right: 28px;
+                                                right: 18px;
                                                 top: 17px;
 										    }
                                         }
