--- a/stylesheets/pages/product.less
+++ b/stylesheets/pages/product.less
@@ -633,7 +633,7 @@
                                         }
                                         .subscrib-multi{
                                             display: inline-block;
-                                            width: 50%;
+                                            width: 51%;
                                             text-align: center;
                                             .text-info{
                                                 font-size: 14px;
