--- a/stylesheets/pages/subscription.less
+++ b/stylesheets/pages/subscription.less
@@ -73,7 +73,8 @@
 									    vertical-align: top;
     									margin-top: 30px;
 									    &:first-child{
-									    	border-right: solid 1px #cfcfcf;
+											border-right: solid 1px #cfcfcf;
+											padding-bottom: 22px;;
 									    }
 									    &:nth-child(2){
 									    	border-right: solid 1px #cfcfcf;
@@ -1441,7 +1442,8 @@
 					   					    }
 					   					    &:first-child{
 					   					    	border: 0px;
-										    	border-bottom: solid 1px #cfcfcf;
+												border-bottom: solid 1px #cfcfcf;
+												padding-bottom: 18px;
 										    }
 										    &:nth-child(2){
 										    	border: 0px;
@@ -2623,7 +2625,8 @@
 					   					    }
 					   					    &:first-child{
 					   					    	border: 0px;
-										    	border-bottom: solid 1px #cfcfcf;
+												border-bottom: solid 1px #cfcfcf;
+												padding-bottom: 18px;
 										    }
 										    &:nth-child(2){
 										    	border: 0px;
